exports[`test disables the label 1`] = `
<label
  htmlFor={undefined}
  style={
    Object {
      "cursor": "inherit",
    }
  } />
`;

exports[`test displays a form label to the user 1`] = `
<label
  htmlFor={undefined}
  style={undefined} />
`;

exports[`test displays a label name to the user 1`] = `
<label
  htmlFor={undefined}
  style={undefined}>
  label
</label>
`;

exports[`test passes the label for to the component 1`] = `
<label
  htmlFor="goGoGadget"
  style={undefined} />
`;

exports[`test spreads styles if disabled is true 1`] = `
<label
  htmlFor={undefined}
  style={
    Object {
      "color": "green",
      "cursor": "inherit",
    }
  } />
`;
